add login handler
